<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="5dp"
            android:padding="16dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="@string/city" />
                        <TextView
                            android:id="@+id/textCity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="@string/dummy_medium"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="@string/founded" />
                        <TextView
                            android:id="@+id/textFounded"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="@string/dummy_short"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="@string/stadium" />
                        <TextView
                            android:id="@+id/textStadium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="@string/dummy_short"/>
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="@string/league" />
                        <TextView
                            android:id="@+id/textLeague"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="@string/dummy_medium"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="@string/manager" />
                        <TextView
                            android:id="@+id/textManager"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="@string/dummy_short"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:text="@string/alias" />
                        <TextView
                            android:id="@+id/textAlias"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="@string/dummy_short"/>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            />
        <TextView
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/dummy_long"/>
    </LinearLayout>
</ScrollView>