<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:text="@string/dummy_date"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textDate">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/vs">

                    <ImageView
                        android:id="@+id/imgHome"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/img_acm"/>

                    <TextView
                        android:id="@+id/titleHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/scoreHome"
                        android:layout_toRightOf="@+id/imgHome"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/dummy_short"/>

                    <TextView
                        android:id="@+id/scoreHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:textSize="24sp"
                        android:text="@string/dummy_number"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/vs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/vs"/>

                <RelativeLayout
                    android:layout_toRightOf="@+id/vs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                    <ImageView
                        android:id="@+id/imgAway"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/img_acm"/>

                    <TextView
                        android:id="@+id/titleAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/scoreAway"
                        android:layout_toLeftOf="@id/imgAway"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/dummy_short"/>

                    <TextView
                        android:id="@+id/scoreAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:textSize="24sp"
                        android:text="@string/dummy_number"/>

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>